# warp-bubble-optimizer

./: .gitignore  CHANGELOG.md  COMPLETE_DIGITAL_TWIN_FINAL_SUMMARY.py  COMPLETE_MVP_VALIDATION.py  CONTRIBUTING.md  DIGITAL_TWIN_SUMMARY.py  DOCUMENTATION_COMPLETENESS_VALIDATION.md  DOCUMENTATION_UPDATES_SUMMARY.md  ENERGY_OPTIMIZATION_REPORT.json  FINAL_ADAPTIVE_FIDELITY_SUMMARY.py  FINAL_COMPLETION_VALIDATION.py  FINAL_MVP_SUMMARY.py  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_SUMMARY.md  LATEX_DOCUMENTATION_UPDATE_SUMMARY.md  MANIFEST.in  MATPLOTLIB_BLOCKING_FIXED.md  MISSION_COMPLETE_IMPULSE_INTEGRATION.md  MVP_INTEGRATION_TEST.py  README-impulse-cli.md  README-impulse-schema.md  README.md  README_FLIGHT_PIPELINE.md  SETUP_COMPLETE.py  SIMPLE_MVP_VALIDATION.py  SPACE_PROTECTION_IMPLEMENTATION_COMPLETE.md  ULTIMATE_BSPLINE_DOCS_UPDATE_SUMMARY.md  ULTIMATE_BSPLINE_INTEGRATION_COMPLETE.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  UQ-TODO.ndjson.backup  VnV-TODO-RESOLVED.ndjson  VnV-TODO.ndjson  advanced_multi_strategy_optimizer.py  advanced_shape_optimizer.py  analog_sim.py  analyze_m8_breakthrough.py  analyze_results.py  atmospheric_constraints.py  bayes_opt_and_refine.py  (+148 more)
.github/: PULL_REQUEST_TEMPLATE_REMOVAL_CHECKLIST.md
automated_pipeline_results/: FINAL_PIPELINE_REPORT.md
docs/: 3plus1D_stability_analysis.tex  4d_warp_ansatz.tex  8gaussian_breakthrough_discoveries.tex  ADAPTIVE_FIDELITY_IMPLEMENTATION_COMPLETE.md  ATMOSPHERIC_CONSTRAINTS_COMPLETE.md  BREAKTHROUGH_SUMMARY.md  COMPLETE_PIPELINE_SUMMARY.md  DEPRECATIONS.md  FINAL_DOCUMENTATION_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  HIL_loopback.md  INTEGRATION_SUMMARY.md  M8_BREAKTHROUGH_REPORT.md  M8_TWO_STAGE_README.md  OPTIMIZATION_REPORT.md  PATCH_APPLICATION_SUMMARY.md  PHENOMENOLOGY_FRAMEWORK_COMPLETE.md  PROTECTION_SYSTEMS_COMPLETE.md  README.md  README_PIPELINE.md  SOLITON_PROJECT_FINAL_REPORT.md  ULTIMATE_BSPLINE_IMPLEMENTATION_REPORT.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  VnV-TODO-RESOLVED.ndjson  VnV-TODO.ndjson  ansatz_evolution.tex  (+67 more)
(+128 files in other folders)
